fixed tables margin overflow.

--- a/client/src/components/pages/Dashboard/helpers/DashboardPanel/DashboardPanel.scss
+++ b/client/src/components/pages/Dashboard/helpers/DashboardPanel/DashboardPanel.scss
@@ -109,8 +109,11 @@
 
   &__cridentials {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 0 2em;
+    align-items: center;
+    flex-direction: column;
+
+    table:first-child {
+      margin-bottom: 3em;
+    }
   }
 }
