--- a/client/src/components/pages/Profiles/helpers/ProfileList.scss
+++ b/client/src/components/pages/Profiles/helpers/ProfileList.scss
@@ -6,5 +6,5 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  grid-gap: 2.2em;
+  gap: 2.2em;
 }
